--- a/index.html
+++ b/index.html
@@ -81,13 +81,14 @@ and when i say mind linked i mean really linked she can sometimes hear my though
   <p>In Esia, the government system is very different from Earth's. <br>
 they have what Kai calls the 'Elder counsel' who are the leaders of their planet. <br>
     they have four members, <br>
-    whose job is to pass laws into power, appoint reps for the royal courts, <br.
+    whose job is to pass laws into power, appoint representatives for the royal courts, <br>
      and represent the planet in interplanetary affairs and treaties.
 </p>
   <p>
-    the 'royal courts' who have a 'rep' for each city. <br>
-their job is to propose ideas for laws, and provide aid and inform the Elder counsel of current affairs and state problems.
-</p>
+    the 'royal courts' who have a representative for each city. <br>
+their job is to propose ideas for laws, and provide aid and inform the Elder counsel of current affairs and state problems. 
+
+  </p>
 </div>
 </div>
 </div>
